# OpenGL-Cross-Platform

./: .gitignore  Build.cmd  Build.sh  CMakeLists.txt  Debug.cmd  Debug.sh  README.md  Run.cmd  Run.sh  imgui.ini  main.cpp  shader-compiled.frag  shader-compiled.vert  shader.frag  shader.vert
examples/: 3D_model.cpp  CMakeLists.txt  camera.cpp  cubes.cpp  imgui.cpp  lightmaps.cpp  material.cpp  multiplelights.cpp  project.cpp  pyramid.cpp  rectangle.cpp  shader.cpp  texture.cpp  tileMap.cpp  tileMap2.cpp  transformation.cpp  window.cpp
examples/res/Shader/: 3D_Model.frag  3D_Model.vert  Camera.frag  Cubes.frag  Imgui.frag  LightMaps.frag  LightMaps.vert  LightProject.frag  Material.frag  MultipleLights.frag  MultipleLights.vert  Project.frag  Pyramid.frag  Shader1.frag  Shader1.vert  Shader2.frag  Shader2.vert  ShaderMaps.frag  tileMap.frag  tileMap.vert
include/: Camera.h  Camera.hpp  Mesh.hpp  Model.hpp  Shader.h
res/Shader/: Shader.frag  Shader.vert  fragmentShader.glsl
src/: CMakeLists.txt  Model.cpp  Shader.cpp
